<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_text_r"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.rzaevali.resistorcolor.TextRActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">

        <TextView
            android:text="@string/resistor_value_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resistor_value_view"
            android:textSize="18sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="177dp"
                android:layout_height="match_parent"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/resistor_value"
                android:maxLength="3" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/multiplier_spinner"
                android:entries="@array/multiplier_spinner_entries" />

        </LinearLayout>

        <TextView
            android:text="@string/resistor_accuracy_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/resistor_accuracy_view"
            android:textSize="18sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="36dp">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/accuracy_spinner"
                android:entries="@array/accuracy_spinner_entries" />
        </LinearLayout>

        <TextView
            android:text="@string/resistor_coefficient_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/resistor_coefficient_view"
            android:textSize="18sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="36dp">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/coefficient_spinner"
                android:entries="@array/coefficient_spinner_entries" />
        </LinearLayout>

        <info.hoang8f.widget.FButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/button_get_color_code"
            android:text="@string/button_get_color_code_text"
            fbutton:buttonColor="@color/colorPrimary"
            fbutton:shadowEnabled="true"
            fbutton:shadowColor="@color/fbutton_color_asbestos"
            android:textColor="#ffffff"
            android:onClick="getColorInfo" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/colors_list_view" />

    </LinearLayout>

</RelativeLayout>
