<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.rzaevali.resistorcolor.ResistorsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:weightSum="1">

        <info.hoang8f.widget.FButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/switchToTextGenText"
            android:textColor="#ffffff"
            fbutton:shadowEnabled="false"
            fbutton:buttonColor="@color/colorPrimary"
            android:id="@+id/switchToTextGen"
            android:layout_gravity="center_horizontal"
            android:onClick="openResistorTextActivity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/bandsCountText"
            android:id="@+id/bandsCountTextView"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="0.05">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fourBands"
                    android:text="4"
                    android:layout_marginRight="20dp"
                    android:clickable="false"
                    android:longClickable="true"
                    android:onClick="chooseFourBands"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5"
                    android:id="@+id/fiveBands"
                    android:layout_marginRight="20dp"
                    android:onClick="chooseFiveBands"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6"
                    android:id="@+id/sixBands"
                    android:layout_marginRight="0dp"
                    android:onClick="chooseSixBands"
                    android:checked="true" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal"
            android:layout_weight="0.10">

            <info.hoang8f.widget.FButton
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/bandTitle"
                android:id="@+id/button1stBand"
                android:onClick="set1stBandColor"
                android:textSize="35sp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                fbutton:shadowEnabled="true"
                fbutton:shadowColor="@color/fbutton_color_concrete"
                android:layout_weight="0.16" />

            <info.hoang8f.widget.FButton
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/bandTitle"
                android:id="@+id/button2ndBand"
                android:onClick="set2ndBandColor"
                android:textSize="35sp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                fbutton:shadowEnabled="true"
                fbutton:shadowColor="@color/fbutton_color_concrete"
                android:layout_weight="0.16" />

            <info.hoang8f.widget.FButton
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/bandTitle"
                android:id="@+id/button3rdBand"
                android:onClick="set3rdBandColor"
                android:textSize="35sp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                fbutton:shadowEnabled="true"
                fbutton:shadowColor="@color/fbutton_color_concrete"
                android:layout_weight="0.16" />

            <info.hoang8f.widget.FButton
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/bandTitle"
                android:id="@+id/button4thBand"
                android:onClick="set4thBandColor"
                android:textSize="35sp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                fbutton:shadowEnabled="true"
                fbutton:shadowColor="@color/fbutton_color_concrete"
                android:layout_weight="0.16" />

            <info.hoang8f.widget.FButton
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/bandTitle"
                android:id="@+id/button5thBand"
                android:onClick="set5thBandColor"
                android:textSize="35sp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                fbutton:shadowEnabled="true"
                fbutton:shadowColor="@color/fbutton_color_concrete"
                android:layout_weight="0.16" />

            <info.hoang8f.widget.FButton
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/bandTitle"
                android:id="@+id/button6thBand"
                android:onClick="set6thBandColor"
                android:textSize="35sp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                fbutton:shadowEnabled="true"
                fbutton:shadowColor="@color/fbutton_color_concrete"
                android:layout_weight="0.16" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/infoView"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:textAlignment="center"
            android:fontFamily="sans-serif" />

    </LinearLayout>

</RelativeLayout>
